Fix course-title overlap

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -151,3 +151,7 @@ $orange: #dc7927;
 body.course-item-popup #learn-press-course-curriculum .learn-press-breadcrumb {
 	display: none !important;
 }
+
+#popup-sidebar #learn-press-course-curriculum ul.curriculum-sections .section-content .course-item .course-item-title {
+	max-width: calc(100% - 128px);
+}
